changed bio heading

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div class="col-md-8" style="margin-top: 10px;">
-        <h3>Zachary Englhardt</h3>
+        <h3>About Me</h3>
         <div>I am a first-year PhD student in the 
           <a href="https://ubicomplab.cs.washington.edu/" target="_blank">Ubiquitous Computing Lab</a>
           at the University of Washington, advised by 
