changed facebit photo

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
         </div>
       </div>
     </div>
-    <div class="row" id="publications">
-      <h4 style="margin-top: 30px;" id="publications">Selected Publications</h4>
+    <div class="row" id="publications"></div>
+      <h4 style="margin-top: 30px;">Selected Publications</h4>
       <p style="font-size:14px">* Denotes Equal Contribution</p>
       <div class="row" style="margin-top: 0px;"><!--should be 30px just had to change first one to fit-->
         <div class="col-md-4">
-          <img src="./images/facebit.jpeg" alt="Ubicomp22" style="max-width: 100%; max-height: 250px;">
+          <img src="./images/facebit.png" alt="Ubicomp22" style="max-width: 100%; max-height: 250px;">
         </div>
         <div class="col-md-8">
           <p><strong>FaceBit: Smart Face Masks Platform </strong></p>
@@ -110,8 +110,7 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="row" id="experience" style="margin-bottom: 30px">
+    <div class="row" id="experience" style="margin-bottom: 30px"></div>
       <h4 style="margin-top: 30px;">Experience</h4>
       <div class="row" style="margin-top: 10px;">
         <div class="col-8">
@@ -190,7 +189,6 @@
             <div>Los Gatos, California</div>
           </div>
       </div>
-    </div>
   </div>
 </body>
 </html>
