Update index.html to 2nd year

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
       <div class="col-md-8" style="margin-top: 10px;">
         <h3>About Me</h3>
-        <div>I am a first-year PhD student in the 
+        <div>I am a second-year PhD student in the 
           <a href="https://ubicomplab.cs.washington.edu/" target="_blank">Ubiquitous Computing Lab</a>
           at the University of Washington, advised by 
           <a href="https://homes.cs.washington.edu/~vsiyer/" target="_blank">Vikram Iyer</a>
