Update index.html with new Shwetak page

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           at the University of Washington, advised by 
           <a href="https://homes.cs.washington.edu/~vsiyer/" target="_blank">Vikram Iyer</a>
           and
-          <a href="https://homes.cs.washington.edu/~shwetak/" target="_blank">Shwetak Patel</a>.
+          <a href="https://www.cs.washington.edu/people/faculty/shwetak" target="_blank">Shwetak Patel</a>.
           Before joining UW, I received my BS and MS in Computer Engineering at Northwestern University where I worked as an undergraduate research assistant for 
           <a href="https://kamoamoa.com/" target="_blank">Josiah Hester</a>
           and 
