--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="col-md-8">
           <p><strong>MilliMobile: An Autonomous Battery-free Wireless Microrobot</strong></p>
           <div>
-            Kyle Johnson*, <strong>Zachary Englhardt*</strong>, Vicente Arroyos, Dennis Yin, Shwetak Patel, Vikram Iyer
+            Kyle Johnson*, <strong>Zachary Englhardt*</strong>, Vicente Arroyos*, Dennis Yin, Shwetak Patel, Vikram Iyer
           </div>
           <div>
             <i>MobiCom</i> (2023).
