--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="script.js"></script>
   
     <!-- nav-bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-purple fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid" style="width: 80%;">
           <a class="navbar-brand" href="./index.html">Zachary Englhardt</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
