--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
           <div>
             <i>Ubicomp</i> (2022).
-            <a href="https://dl.acm.org/doi/10.1145/3494991">[Paper]</a></p>
+            <a href="./papers/facebit.pdf">[Paper]</a></p>
             <p style="font-size:15px">
               Covered by 
               <a href="https://www.scientificamerican.com/article/new-sensor-tells-you-how-well-your-mask-is-working/" target="_blank">[Scientific American]</a>
