ready to test first time

--- a/awards/index.html
+++ b/awards/index.html
@@ -59,7 +59,7 @@ title: Awards
     <div class="panel-body">
       {% for pub in sorted_pubs reversed %}
       <div class="row publication-badge">
-        <div class="publication-info col-md-10 col-sm-9 col-xs-12">
+        <div class="publication-info col-md-10 col-sm-9 col-sm-12">
           <a href="{{ pub.url }}"><b>{{ pub.title }}</b></a>
           <p>{% include author_list.html authors=pub.authors %}<br />
             <i>{{ pub.conference }}</i>{% if pub.award %}, <font color="red">{{ pub.award }}</font>{% endif %}
