--- a/members/index.html
+++ b/members/index.html
@@ -21,10 +21,10 @@ redirect_from: /people
 {% assign member = shwetak %}
 <h1>Faculty</h1>
 <div class="row">
-  <div class="member-badge col-md-2 col-sm-3 col-xs-4">
+  <div class="member-badge col-md-2 col-sm-3 col-sm-4">
     <div class="image">{% if member.website != nil %}<a href="{{ member.website }}">{% endif %}<img src="{{site.url}}{{member.image}}"/>{% if member.website != nil %}</a>{% endif %}</div>
   </div>
-  <div class="member-badge col-md-10 col-sm-9 col-xs-8">
+  <div class="member-badge col-md-10 col-sm-9 col-sm-8">
     <div class="details">
       <div class="name">{% if member.website == nil %}{{ member.name }}{% else %}<a href="{{ member.website }}">{{ member.name }}</a>{% endif %}</div>
       <div class="affiliation">Shwetak N. Patel is the Washington Research Foundation Entrepreneurship Endowed Professor in Computer Science & Engineering and Electrical Engineering. His research interests are in the areas of Human-Computer Interaction, Ubiquitous Computing, Sensor-enabled Embedded Systems, and User Interface Software and Technology. Shwetak was a co-founder of Zensi, Inc., a residential energy monitoring company, which was acquired by Belkin, Inc in 2010. He was also a co-founder of a low-power wireless sensor platform company called SNUPI Technologies and a consumer home sensing product called WallyHome, which was acquired by Sears in 2015. He received his Ph.D. in Computer Science from the Georgia Institute of Technology in 2008 and B.S. in Computer Science in 2003. Shwetak is a recipient of a MacArthur Fellowship (2011), Microsoft Research Faculty Fellowship (2011), Sloan Fellowship (2012), MIT TR-35 Award (2009), NSF Career Award (2013), Presidential PECASE Award (2016), ACM Fellow (2016), and ACM Prize in Computing (2018).
@@ -39,7 +39,7 @@ redirect_from: /people
 {% for member in current_members %}
   {% assign affiliation = site.data.affiliations[member.affiliation] %}
 
-  <div class="member-badge col-md-2 col-sm-3 col-xs-4">
+  <div class="member-badge col-md-2 col-sm-3 col-sm-4">
     <div class="image">{% if member.website != nil %}<a href="{{ member.website }}">{% endif %}<img src="{{site.url}}{{member.image}}"/>{% if member.website != nil %}</a>{% endif %}</div>
     <div class="details">
       <div class="name">{% if member.website == nil %}{{ member.name }}{% else %}<a href="{{ member.website }}">{{ member.name }}</a>{% endif %}</div>
@@ -55,7 +55,7 @@ redirect_from: /people
 {% for member in staff_members %}
   {% assign affiliation = site.data.affiliations[member.affiliation] %}
 
-  <div class="member-badge col-md-2 col-sm-3 col-xs-4">
+  <div class="member-badge col-md-2 col-sm-3 col-sm-4">
     <div class="image">{% if member.website != nil %}<a href="{{ member.website }}">{% endif %}<img src="{{site.url}}{{member.image}}"/>{% if member.website != nil %}</a>{% endif %}</div>
     <div class="details">
       <div class="name">{% if member.website == nil %}{{ member.name }}{% else %}<a href="{{ member.website }}">{{ member.name }}</a>{% endif %}</div>
@@ -72,7 +72,7 @@ redirect_from: /people
 <div class="row">
 {% for member in masters %}
   {% assign affiliation = site.data.affiliations[member.affiliation] %}
-  <div class="member-badge col-md-2 col-sm-3 col-xs-4">
+  <div class="member-badge col-md-2 col-sm-3 col-sm-4">
     <div class="image">{% if member.website != nil %}<a href="{{ member.website }}">{% endif %}<img src="{{site.url}}{{member.image}}"/>{% if member.website != nil %}</a>{% endif %}</div>
     <div class="details">
       <div class="name">{% if member.website == nil %}{{ member.name }}{% else %}<a href="{{ member.website }}">{{ member.name }}</a>{% endif %}</div>
@@ -88,7 +88,7 @@ redirect_from: /people
 <div class="row">
 {% for member in ugrads %}
 
-  <div class="member-badge col-md-2 col-sm-3 col-xs-4">
+  <div class="member-badge col-md-2 col-sm-3 col-sm-4">
     <div class="image">{% if member.website != nil %}<a href="{{ member.website }}">{% endif %}<img src="{{site.url}}{{member.image}}"/>{% if member.website != nil %}</a>{% endif %}</div>
     <div class="details">
       <div class="name">{% if member.website == nil %}{{ member.name }}{% else %}<a href="{{ member.website }}">{{ member.name }}</a>{% endif %}</div>
@@ -104,7 +104,7 @@ redirect_from: /people
 <div class="row">
 {% for member in alumni %}
 
-  <div class="member-badge col-md-2 col-sm-3 col-xs-4">
+  <div class="member-badge col-md-2 col-sm-3 col-sm-4">
     <div class="image">{% if member.website != nil %}<a href="{{ member.website }}">{% endif %}<img src="{{site.url}}{{member.image}}"/>{% if member.website != nil %}</a>{% endif %}</div>
     <div class="details">
       <div class="name">{% if member.website == nil %}{{ member.name }}{% else %}<a href="{{ member.website }}">{{ member.name }}</a>{% endif %}</div>
@@ -122,7 +122,7 @@ redirect_from: /people
 {% for member in master_alumni %}
   {% assign affiliation = site.data.affiliations[member.affiliation] %}
 
-  <div class="member-badge col-md-2 col-sm-3 col-xs-4">
+  <div class="member-badge col-md-2 col-sm-3 col-sm-4">
     <div class="details">
       <div class="name">{% if member.website == nil %}{{ member.name }}{% else %}<a href="{{ member.website }}">{{ member.name }}</a>{% endif %}</div>
       <div class="affiliation">{% if member.affiliation != nil %}{{ affiliation }}{% endif %}</div>
@@ -137,7 +137,7 @@ redirect_from: /people
 {% for member in visiting_alumni %}
   {% assign affiliation = site.data.affiliations[member.affiliation] %}
 
-  <div class="member-badge col-md-2 col-sm-3 col-xs-4">
+  <div class="member-badge col-md-2 col-sm-3 col-sm-4">
     <div class="details">
       <div class="name">{% if member.website == nil %}{{ member.name }}{% else %}<a href="{{ member.website }}">{{ member.name }}</a>{% endif %}</div>
       <div class="affiliation">{% if member.affiliation != nil %}{{ affiliation }}{% endif %}</div>
@@ -151,7 +151,7 @@ redirect_from: /people
 {% for member in ugrad_alumni %}
   {% assign affiliation = site.data.affiliations[member.affiliation] %}
 
-  <div class="member-badge col-md-2 col-sm-3 col-xs-4">
+  <div class="member-badge col-md-2 col-sm-3 col-sm-4">
     <div class="details">
       <div class="name">{% if member.website == nil %}{{ member.name }}{% else %}<a href="{{ member.website }}">{{ member.name }}</a>{% endif %}</div>
       <div class="affiliation">{% if member.affiliation != nil %}{{ affiliation }}{% endif %}</div>
@@ -165,7 +165,7 @@ redirect_from: /people
   {% for member in former_staff %}
     
   
-    <div class="member-badge col-md-2 col-sm-3 col-xs-4">
+    <div class="member-badge col-md-2 col-sm-3 col-sm-4">
       <div class="details">
         <div class="name">{% if member.website == nil %}{{ member.name }}{% else %}<a href="{{ member.website }}">{{ member.name }}</a>{% endif %}</div>
         <div class="affiliation">{% if member.affiliation != nil %}{{ affiliation }}{% endif %}</div>
