tweaked image size

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
   <!-- Header section -->
   <div class="container outside">
       <div class="row top">
-        <div class="col-sm-4 co">
+        <div class="col-sm-4">
           <div class="image-container">
             <img class="profile-pic" id="photo" src="images/members/zach.jpg" alt="Profile Photo">
           </div>
         </div>
-        <div class="col-sm-8 details-container">
+        <div class="col-sm-8">
           <div class="details-container">
             <h1>Zachary Englhardt</h1>
             <div class="pronoun-container">
