--- a/publications/index.html
+++ b/publications/index.html
@@ -99,7 +99,7 @@ redirect_from:
 <div class="pub {{ pub.tag }}">
   <div class="row publication-badge">
     <div class="publication-pic col-md-2 col-sm-3 col-sm-12 text-left">
-      {% if pub.thumbnail.size > 0 %}<img src="{{ pub.thumbnail }}"/></a>{% endif %}&nbsp;
+      {% if pub.thumbnail.size > 0 %}<img src="{{ pub.thumbnail }}" class="shadow-img"/></a>{% endif %}&nbsp;
     </div>
     <div class="publication-info col-md-10 col-sm-9 col-sm-12">
       <h2>{{ pub.title }}</h2>
@@ -107,10 +107,10 @@ redirect_from:
       <p><span class="authors">{% include author_list.html authors=pub.authors coauthors=pub.coauthors%}</span><br />
         <i>{% if pub.date > site.time %}<span class="to-appear">To appear in </span>{% endif %}{{ pub.conference }}</i>{% if pub.award %}, <span class="award">{{ pub.award }}</span>{% endif %}<br/>
         {% if pub.date <= site.time %}
-          {% if pub.pdf %}<a href="{{ site.url }}{{ pub.pdf }}" class="btn btn-default btn-xs" aria-label="Download PDF">
+          {% if pub.pdf %}<a href="{{ site.url }}{{ pub.pdf }}" target="_blank" class="btn btn-default btn-xs" aria-label="Download PDF">
             <span class="glyphicon glyphicon-file" aria-hidden="true"></span> PDF
           </a>{% endif %}
-          {% if pub.video.size > 0 %}<a href="{{ pub.video }}" class="btn btn-default btn-xs" aria-label="Video" target="_blank">
+          {% if pub.video.size > 0 %}<a href="{{ pub.video }}" target="_blank" class="btn btn-default btn-xs" aria-label="Video" target="_blank">
             <span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span> Video
           </a> {% endif %}
           {% if pub.citation %}<button type="button" class="btn btn-default btn-xs" aria-label="Citation" data-toggle="modal" data-target="#{{pub.title | slugify}}_citation">
@@ -119,10 +119,10 @@ redirect_from:
           {% if pub.bibtex %}<button type="button" class="btn btn-default btn-xs" aria-label="BibTeX" data-toggle="modal" data-target="#{{pub.title | slugify}}_bibtex">
             <span class="glyphicon glyphicon-book" aria-hidden="true"></span> BibTeX
           </button>{% endif %}
-          {% if pub.project_url %}<a href="{{ pub.project_url }}" class="btn btn-default btn-xs" aria-label="Project Page">
+          {% if pub.project_url %}<a href="{{ pub.project_url }}" target="_blank" class="btn btn-default btn-xs" aria-label="Project Page">
             <span class="glyphicon glyphicon-globe" aria-hidden="true"></span> Page
           </a>{% endif %}
-          {% if pub.code_url %}<a href="{{ pub.code_url }}" class="btn btn-default btn-xs" aria-label="Code">
+          {% if pub.code_url %}<a href="{{ pub.code_url }}" target="_blank" class="btn btn-default btn-xs" aria-label="Code">
             <span class="glyphicon glyphicon-console" aria-hidden="true"></span> Code
           </a>{% endif %}
         {% endif %}
