updated tags to be more helpful and descriptive on the publications pane

--- a/publications/index.html
+++ b/publications/index.html
@@ -75,11 +75,14 @@ redirect_from:
   <label class="btn btn-primary active" onclick="filterByTag('')">
     <input type="radio" name="options" id="option1" autocomplete="off" checked> All
   </label>
-  <label class="btn btn-primary" onclick="filterByTag('reviewedTag')">
-    <input type="radio" name="options" id="option2" autocomplete="off" checked> Full Papers
+  <label class="btn btn-primary" onclick="filterByTag('ai')">
+    <input type="radio" name="options" id="option2" autocomplete="off" checked> AI/ML
   </label>
-  <label class="btn btn-primary" onclick="filterByTag('nonReviewedTag')">
-    <input type="radio" name="options" id="option4" autocomplete="off"> Abstracts and Preprints
+  <label class="btn btn-primary" onclick="filterByTag('hardware')">
+    <input type="radio" name="options" id="option4" autocomplete="off"> Hardware
+  </label>
+  <label class="btn btn-primary" onclick="filterByTag('sustainability')">
+    <input type="radio" name="options" id="option4" autocomplete="off"> Sustainability
   </label>
 </div>
 
