now I'm a third year

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div id="section1" class="section visible">
         <div class="row">
           <div class="col-md-12">
-            <p>Welcome! I am a second-year Ph.D. student in the 
+            <p>Welcome! I am a third-year Ph.D. student in the 
               <a href="https://ubicomplab.cs.washington.edu/" target="_blank">Ubiquitous Computing Lab</a>
               at the University of Washington, advised by 
               <a href="https://homes.cs.washington.edu/~vsiyer/" target="_blank">Vikram Iyer</a>
