--- a/index.html
+++ b/index.html
@@ -109,9 +109,8 @@
             <ol>
               <li><b><i>Developing sustainable computing systems</i></b> that demonstrate sensing, networking, and actuation, and more despite tight 
                 power, material, and form-factor constraints.</li>
-              <li><b><i>Exploring interaction techniques for Large Language Models (LLMs)</i></b>. Specifically, I'm working on tenchniques 
-                to synthesize useful explanations of diverse mobile health data as well as identifying ways to apply LLMs to aid in the development
-                of embedded hardware-software systems.</li>
+              <li><b><i>Human-AI Interaction</i></b>. Specifically, I'm working on tenchniques 
+                to synthesize useful analysis from longidudinal multi-modal mobile health data.</li>
             </ol>
             <p>Check back in a few years to see how I've managed to bridge the gap between these two areas...</p>
             <p>If anything I'm working on seems interesting to you, please get in touch! 
