--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <li><b><i>Developing sustainable computing systems</i></b> that demonstrate sensing, networking, and actuation, and more despite tight 
                 power, material, and form-factor constraints.</li>
               <li><b><i>Human-AI Interaction</i></b>. Specifically, I'm working on tenchniques 
-                to synthesize useful analysis from longidudinal multi-modal mobile health data.</li>
+                to synthesize clinically useful analysis from longidudinal multi-modal mobile health data.</li>
             </ol>
             <p>Check back in a few years to see how I've managed to bridge the gap between these two areas...</p>
             <p>If anything I'm working on seems interesting to you, please get in touch! 
